# Calliope

./: .gitignore  README.md  pyproject.toml
checkpoints/: CURRENT_BEST.txt
configs/: calliope_100m.py  calliope_100m_base_mix_v2.py  calliope_100m_hf_mix.py  calliope_100m_v3_curriculum.py  calliope_100m_v3_deeper.py  calliope_100m_v3_general.py  calliope_10m.py  calliope_30m.py  calliope_30m_ctx512.py  calliope_30m_dropout01.py  calliope_30m_gqa.py  calliope_30m_rope_theta50000.py  calliope_30m_tok8192.py  lora_demo.py  lora_wiki.py
data/fineweb_gpt2/: meta.json
data/hf_mix_gpt2/: meta.json
data/hf_mix_v2_gpt2/: meta.json
data/quillgraph_mix_gpt2/: meta.json
data/simplestories_gpt2/: meta.json
data/tinystories_bpe8192/: meta.json
data/tinystories_gpt2/: meta.json
data/v3_general_bpe32k/: meta.json
data/v3_general_gpt2/: meta.json
data/wikitext_only_gpt2/: meta.json
eval/: eval_loss.py  fixed_prompts.py  metrics.py  sampling.py
experiments/: baseline_10m_vs_30m.md  baseline_30m_vs_gqa.md  calliope_100m_report.md  compose_search.json
model/: __init__.py  config.py  lora.py  muon.py  transformer.py
scripts/: check_split_quality.py  compare_runs.py  compare_samples.py  compose_search.py  count_params.py  eval_behavior.py  generate_synthetic.py  plot_loss.py  prepare_hf_mix.py  prepare_tinystories.py  prepare_tinystories_bpe.py  run_v3_general.ps1  sample.py  sample_fixed_prompts.py  smoke_model.py
train/: checkpoint.py  dataset.py  train.py  train_lora.py  utils.py
